--- a/Frontend/src/pages/ProfileCard/avatar.scss
+++ b/Frontend/src/pages/ProfileCard/avatar.scss
@@ -7,8 +7,12 @@ body {
   padding: 0;
   background-color: #0c0d2c; /* Dark blue */
   font-family: "Open Sans", sans-serif;
-
+  min-height: 100vh;
+  overflow-y: scroll; /* Always show vertical scrollbar */
+  scroll-behavior: smooth;
 }
+
+
 
 /* Input Fields and Button */
 .card-input-container {
