--- a/Frontend/src/components/carousel/style.scss
+++ b/Frontend/src/components/carousel/style.scss
@@ -1,327 +1,360 @@
 @import "../../mixins.scss";
 .carousel {
-    // margin-bottom: 50px;
-    .contentWrapper {
+  // margin-bottom: 50px;
+  .contentWrapper {
+    position: relative;
+    margin: 40px auto;
+    padding: 20px;
+    border: 1px solid #212121;
+
+    border-radius: 20px;
+    // background: #1c1c1c;
+    max-width: 95%;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+  }
+  .carouselTitle {
+    font-size: 20px;
+    color: white;
+    margin-bottom: 20px;
+    font-weight: normal;
+  }
+  .arrow {
+    font-size: 30px;
+    // color: black;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    opacity: 0.7;
+    z-index: 2;
+    // display: none;
+    @include md {
+      display: block;
+    }
+    &:hover {
+      opacity: 1;
+    }
+  }
+  .carouselLeftNav {
+    left: -10px;
+    @include md {
+      left: -20px;
+    }
+  }
+
+  .carouselRighttNav {
+    right: -10px;
+    @include md {
+      right: -20px;
+    }
+  }
+
+  .loadingSkeleton {
+    display: flex;
+    gap: 10px;
+    overflow-y: hidden;
+    margin-right: -20px;
+    margin-left: -20px;
+    padding: 0 20px;
+    @include md {
+      gap: 20px;
+      overflow: hidden;
+      margin: 0;
+      padding: 0;
+    }
+    .skeletonItem {
+      width: 125px;
+      @include md {
+        width: calc(25% - 15px);
+      }
+      @include lg {
+        width: calc(20% - 16px);
+      }
+      flex-shrink: 0;
+      .posterBlock {
+        border-radius: 12px;
+        width: 90%;
+
+        aspect-ratio: 1 / 1.5;
+        margin-bottom: 30px;
+      }
+      .textBlock {
+        display: flex;
+        flex-direction: column;
+        .title {
+          width: 100%;
+
+          margin-bottom: 10px;
+        }
+        .date {
+          width: 75%;
+          height: 20px;
+        }
+      }
+    }
+  }
+
+  .carouselItems {
+    display: flex;
+    // gap: 20px;
+    justify-content: center;
+    overflow-y: hidden;
+    margin-right: -20px;
+    margin-left: -20px;
+    // padding: 0 20px;
+    overflow-x: auto;
+    padding: 20px 0;
+    &::-webkit-scrollbar {
+      height: 8px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background: #444;
+      border-radius: 10px;
+    }
+    @include md {
+      gap: 2px;
+      overflow: hidden;
+      margin: 0;
+      padding: 0;
+    }
+    @include lg {
+      gap: 7px;
+    }
+    .carouselItem {
+      width: 125px;
+      border-radius: 20px;
+      // border: 0.1px solid rgb(48, 48, 48);
+      border: 0.1px solid #152445;
+
+      cursor: pointer;
+      // border: 1px solid #2a2a2a;
+      border-radius: 15px;
+      // background: #1c1c1c;
+      padding: 10px;
+      background: #111111;
+      flex-shrink: 0;
+      transition: transform 0.3s, box-shadow 0.3s;
+
+      &:hover {
+        transform: scale(1.05);
+        box-shadow: 0 4px 15px rgba(255, 255, 255, 0.1);
+      }
+      @include md {
+        width: calc(25% - 15px);
+      }
+      @include lg {
+        width: calc(15% - 16px);
+      }
+      flex-shrink: 0;
+      .posterBlock {
+        width: 100%;
+        aspect-ratio: 1 / 1.5;
         position: relative;
-    }
-    .carouselTitle {
-        font-size: 20px;
-        color: white;
-        margin-bottom: 20px;
-        font-weight: normal;
-    }
-    .arrow {
-        font-size: 30px;
-        // color: black;
-        position: absolute;
-        top: 44%;
-        transform: translateY(-50%);
-        cursor: pointer;
-        opacity: 0.7;
-        z-index: 1;
-        // display: none;
-        @include md {
-            display: block;
+        margin-bottom: 10px;
+
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          border-radius: 10px;
         }
-        &:hover {
-            opacity: 0.8;
+        .avatarImage {
+          position: absolute;
+          top: 8px;
+          right: 8px;
+          width: 28px;
+          height: 28px;
+          border-radius: 50%;
+          // border: 2px solid white;
+          border: 0.1px solid #1d325f;
+          box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
         }
-    }
-    .carouselLeftNav {
-        left: 30px;
-    }
-    .carouselRighttNav {
-        right: 30px;
-    }
-    .loadingSkeleton {
-        display: flex;
-        gap: 10px;
-        overflow-y: hidden;
-        margin-right: -20px;
-        margin-left: -20px;
-        padding: 0 20px;
-        @include md {
-            gap: 20px;
-            overflow: hidden;
-            margin: 0;
-            padding: 0;
+        .lazy-load-image-background {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          // border-radius: 12px;
+          overflow: hidden;
+
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center;
+          }
         }
-        .skeletonItem {
-            width: 125px;
-            @include md {
-                width: calc(25% - 15px);
-            }
-            @include lg {
-                width: calc(20% - 16px);
-            }
-            flex-shrink: 0;
-            .posterBlock {
-                border-radius: 12px;
-                width: 90%;
-                
-                aspect-ratio: 1 / 1.5;
-                margin-bottom: 30px;
-            }
-            .textBlock {
-                display: flex;
-                flex-direction: column;
-                .title {
-                    width: 100%;
-                    height: 20px;
-                    margin-bottom: 10px;
-                }
-                .date {
-                    width: 75%;
-                    height: 20px;
-                }
-            }
+
+        .circleRating {
+          width: 40px;
+          height: 40px;
+          position: relative;
+          top: 30px;
+          background-color: white;
+          flex-shrink: 0;
+
+          @include md {
+            width: 50px;
+            height: 50px;
+          }
         }
+
+        .genres {
+          display: none;
+          position: relative;
+
+          @include md {
+            display: flex;
+            flex-flow: wrap;
+            justify-content: flex-end;
+          }
+        }
+      }
+
+      .textBlock {
+        text-align: center;
+        .title {
+          font-size: 14px;
+          color: white;
+          font-weight: 500;
+
+          @include ellipsis(1);
+          @include md {
+            font-size: 16px;
+          }
+        }
+        .date {
+          font-size: 14px;
+          opacity: 0.5;
+        }
+      }
     }
-    .carouselItems {
-        display: flex;
-        // gap: 10px;
-        overflow-y: hidden;
-        margin-right: -20px;
-        margin-left: -20px;
-        padding: 0 20px;
-        @include md {
-            gap: 2px;
-            overflow: hidden;
-            margin: 0;
-            padding: 0;
-        }
-        .carouselItem {
-            width: 125px;
-            cursor: pointer;
-            @include md {
-                width: calc(25% - 15px);
-            }
-            @include lg {
-                width: calc(20% - 16px);
-            }
-            flex-shrink: 0;
-            .posterBlock {
-                position: relative;
-                width: 90%;
-                aspect-ratio: 1 / 1.5;
-                background-size: cover;
-                background-position: center;
-                margin-bottom: 20px;
-                display: flex;
-                align-items: flex-end;
-                justify-content: space-between;
-                padding: 10px;
-                transition: transform 0.3s; /* Add transition for smooth effect */
-            
-                &:hover {
-                    transform: scale(1.1); /* Scale up slightly on hover */
-                }
-                .avatarImage {
-                    position: absolute;
-                    top: 10px;
-                    right: 10px;
-                    width: 30px;
-                    height: 30px;
-                    border-radius: 50%;
-                    cursor: pointer;
-                    border: 2px solid white; /* Optional: Adds a border around the avatar */
-                    box-shadow: 0 0 3px rgba(0, 0, 0, 0.5); /* Optional: Adds a shadow effect */
-                }
-            
-            
-                .lazy-load-image-background {
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    width: 100%;
-                    height: 100%;
-                    // border-radius: 12px;
-                    overflow: hidden;
-            
-                    img {
-                        width: 100%;
-                        height: 100%;
-                        object-fit: cover;
-                        object-position: center;
-                    }
-                }
-            
-                .circleRating {
-                    width: 40px;
-                    height: 40px;
-                    position: relative;
-                    top: 30px;
-                    background-color: white;
-                    flex-shrink: 0;
-            
-                    @include md {
-                        width: 50px;
-                        height: 50px;
-                    }
-                }
-            
-                .genres {
-                    display: none;
-                    position: relative;
-            
-                    @include md {
-                        display: flex;
-                        flex-flow: wrap;
-                        justify-content: flex-end;
-                    }
-                }
-            }
-            
-            .textBlock {
-                color: white;
-                display: flex;
-                flex-direction: column;
-                .title {
-                    font-size: 16px;
-                    margin-bottom: 10px;
-                    line-height: 24px;
-                    @include ellipsis(1);
-                    @include md {
-                        font-size: 20px;
-                    }
-                }
-                .date {
-                    font-size: 14px;
-                    opacity: 0.5;
-                }
-            }
-        }
-    }
+  }
 }
 .username {
-    color: white /* Dark color */
-    /* Add any other styles you want */
+  color: white; /* Dark color */
+  /* Add any other styles you want */
 }
 
 .swiper {
-    width: 650px;
-    height: 490px;
-    border-radius: 5px;
-  }
-  
-  .swiper-slide {
-    text-align: center;
-    // font-size: 18px;
-    background: #000;
-  
-    /* Center slide text vertically */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
+  width: 650px;
+  height: 490px;
+  border-radius: 5px;
+}
 
-  }
-  
-  .swiper-slide img {
-    display: block;
-    
-    // width: 100%;     
-    height: 100%;
-    // object-fit:contain;
-   
-    background-color: rgb(7, 7, 35);
-  }
-  .Description-Title{
-    font-size: 34px;
-    margin-bottom: 10px;
-  }
-  .mySwiper2 {
-    height: 85px;
-    box-sizing: border-box;
-    margin-top: 10px;
-    margin-left: 50px;
-  }
-  
+.swiper-slide {
+  text-align: center;
+  // font-size: 18px;
+  background: #000;
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide img {
+  display: block;
+
+  // width: 100%;
+  height: 100%;
+  // object-fit:contain;
+
+  background-color: rgb(7, 7, 35);
+}
+.Description-Title {
+  font-size: 34px;
+  margin-bottom: 10px;
+}
+.mySwiper2 {
+  height: 85px;
+  box-sizing: border-box;
+  margin-top: 10px;
+  margin-left: 50px;
+}
+
 //   .mySwiper2 .swiper-slide.swiper-slide-active {
 //     opacity: 1 !important; /* Force full visibility for the active thumbnail */
 //     border: 2px solid #fff; /* Add a border to the active thumbnail */
 //     box-shadow: 0 0 10px rgba(255, 255, 255, 0.8); /* Highlight with a shadow */
 //     transition: opacity 0.3s ease, box-shadow 0.3s ease, border 0.3s ease; /* Smooth transition */
 //   }
-  
+
 //   /* Styles for non-active thumbnails */
 //   .mySwiper2 .swiper-slide {
 //     opacity: 0.7; /* Darken the non-active thumbnails */
 //     transition: opacity 0.3s ease; /* Smooth transition for opacity change */
 //   }
-  
-  .mySwiper2 .swiper-slide img {
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: cover; /* Ensures the image covers the slide */
-  }
-  
-//   
+
+.mySwiper2 .swiper-slide img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover; /* Ensures the image covers the slide */
+}
+
+//
 // .swiper-wrapper{
 //     margin-top: 10px;
 // }
 
-
 @media (max-width: 768px) {
-    .swiper-slide img {
-    
-        
-         width: 100%;     
-        
-      }
+  .swiper-slide img {
+    width: 100%;
+  }
 }
 
 //------------------ model box css-----------------
 
 .modal-box {
-    background: #fff;
-    padding: 20px;
-    width: 650px; /* Adjust width as needed */
-    max-width: 100%; /* Ensure it doesn't exceed the viewport width */
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .modal-box h2 {
-    font-size: 24px;
-    margin-bottom: 20px;
-  }
-  
-  .modal-box form {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .modal-box form > * {
-    margin-bottom: 15px; /* Adjust spacing between form elements */
-  }
-  
-  .modal-box form .MuiTextField-root {
-    /* Style for Material-UI TextField component */
-    margin-bottom: 15px;
-  }
-  
-  .modal-box form .MuiButton-root {
-    /* Style for Material-UI Button component */
-    margin-top: 10px;
-  }
-  
-  .modal-box form .MuiButton-containedPrimary {
-    /* Style for primary color contained Button */
-    background-color: #007bff; /* Example primary color */
-    color: #fff;
-  }
-  
-  .modal-box form .MuiButton-containedSecondary {
-   
-    color: #fff;
-  }
-  .cancel{
-    background: red;
-  }
-  
+  background: #fff;
+  padding: 20px;
+  width: 650px; /* Adjust width as needed */
+  max-width: 100%; /* Ensure it doesn't exceed the viewport width */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.modal-box h2 {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.modal-box form {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-box form > * {
+  margin-bottom: 15px; /* Adjust spacing between form elements */
+}
+
+.modal-box form .MuiTextField-root {
+  /* Style for Material-UI TextField component */
+  margin-bottom: 15px;
+}
+
+.modal-box form .MuiButton-root {
+  /* Style for Material-UI Button component */
+  margin-top: 10px;
+}
+
+.modal-box form .MuiButton-containedPrimary {
+  /* Style for primary color contained Button */
+  background-color: #007bff; /* Example primary color */
+  color: #fff;
+}
+
+.modal-box form .MuiButton-containedSecondary {
+  color: #fff;
+}
+.cancel {
+  background: red;
+}
