--- a/Frontend/src/components/header/style.scss
+++ b/Frontend/src/components/header/style.scss
@@ -17,7 +17,7 @@
   transition: all ease 0.5s;
   z-index: 1000;
   background: rgba(0, 0, 0, 0.4);
-  border-bottom: 0.1px solid #333;
+  border-bottom: 0.1px solid #232323;
   backdrop-filter: blur(3.5px);
   -webkit-backdrop-filter: blur(3.5px);
 
@@ -52,26 +52,47 @@
     font-family: Arial, sans-serif;
     .menuItem1 {
       height: 60px;
-      font-size: 18px;
+      font-size: 17px;
       font-style: normal;
       display: flex;
       gap: 12px;
       align-items: center;
       margin: 0 15px;
-      color: rgb(223, 223, 223);
+      color: whitesmoke;
       font-weight: 500;
       position: relative;
+
       cursor: pointer;
 
       &:hover {
         color: var(--pink);
       }
       .username {
-        color: rgb(223, 223, 223);
+        // color: rgb(223, 223, 223);
+        color: whitesmoke;
         font-weight: 500;
         @media (max-width: 768px) {
           display: none;
         }
+      }
+    }
+    .menuItem2 {
+      cursor: pointer;
+      margin: 0 15px;
+      font-size: 16px;
+      padding: 3px 15px;
+      border-radius: 17px;
+      // border: 0.1px solid #363a42;
+      border: 0.1px solid darkslategray;
+      //   color: rgb(223, 223, 223);
+
+      background: rgba(45, 54, 57, 295);
+      color: whitesmoke;
+      font-weight: 500;
+      &:hover {
+        background: rgba(45, 44, 47, 255);
+        border: 0.1px solid darkslategray;
+        color: #fff;
       }
     }
   }
@@ -129,6 +150,7 @@
   display: flex;
   margin-left: 30px;
   align-items: center;
+  cursor: pointer;
 
   input {
     width: 650px;
@@ -141,6 +163,7 @@
     font-size: 16px;
     outline: none;
 
+    cursor: pointer;
     &::placeholder {
       color: #888; /* Placeholder text color */
     }
@@ -225,6 +248,7 @@
 
 @media (max-width: 768px) {
   .header1 {
+    height: 50px;
     .contentWrapper {
       flex-direction: row; /* Arrange items in a row */
       justify-content: space-between;
@@ -237,13 +261,13 @@
         margin-right: 10px;
 
         img {
-          height: 35px; /* Reduce logo size */
-          width: 35px; /* Keep proportions */
+          height: 33px; /* Reduce logo size */
+          width: 33px; /* Keep proportions */
         }
       }
       .avatarImage {
-        width: 40px;
-        height: 40px;
+        width: 38px;
+        height: 38px;
       }
       .search-results-list {
         width: 390px;
@@ -271,6 +295,11 @@
       .icon {
         font-size: 1.2em;
       }
+    }
+    .menuItem2 {
+      background: transparent !important;
+      border: none !important;
+      padding: 0 !important;
     }
   }
   .profile-options {
