--- a/Frontend/src/components/carousel/style.scss
+++ b/Frontend/src/components/carousel/style.scss
@@ -3,7 +3,8 @@
   // margin-bottom: 50px;
   .contentWrapper {
     position: relative;
-    margin: 40px auto;
+    // margin: 40px auto;
+    margin-bottom: 55px;
     padding: 20px;
     border: 1px solid #212121;
 
@@ -264,7 +265,7 @@
   height: 100%;
   // object-fit:contain;
 
-  background-color: rgb(7, 7, 35);
+  // background-color: rgb(7, 7, 35);
 }
 .Description-Title {
   font-size: 34px;
