--- a/Frontend/src/AboutCard/NavbarStyle.css
+++ b/Frontend/src/AboutCard/NavbarStyle.css
@@ -1,6 +1,6 @@
 .nav-top {
   display: flex;
-  justify-content:space-between;
+  justify-content: space-between;
   align-items: center;
   position: fixed;
   padding: 0 20px;
@@ -13,14 +13,15 @@
   height: 53px;
   border-radius: 12px;
   z-index: 10;
-  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
   background: rgba(0, 0, 0, 0.3);
+  border: 0.1px solid rgb(39, 39, 39);
 }
 
-.plane{
-  font-weight:100 ;
+.plane {
+  font-weight: 100;
   transform: scaleY(0.1);
-  
 }
 
 .logo-img img {
@@ -37,8 +38,6 @@
   margin-right: 190px;
 }
 
-
-
 .nav-menu button {
   background: none;
   border: none;
@@ -48,33 +47,33 @@
   padding: 6px 10px;
   transition: background-color 0.3s;
 }
- .nav-menu button.btn2{
-  background:#ff6600;
-  padding: 7px 14px;
+.nav-menu button.btn2 {
+  background: #ff6600;
+  padding: 3px 18px;
   border-radius: 30px;
 }
-.nav-menu button.btn2:hover{
-  background: #ff4f00 ;
+.nav-menu button.btn2:hover {
+  background: #ff4f00;
 }
 
 .nav-menu button:hover {
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-
-
 @media screen and (max-width: 850px) {
   .nav-top {
     padding: 0 10px;
     height: 60px;
   }
-  .logo-img img{
+  .logo-img img {
     margin-left: 10px;
+    width: 33px;
+    height: 33px;
   }
 
   .logo img {
-    height: 40px;
-    width: 40px;
+    /* height: 40px;
+    width: 40px; */
     margin-left: 10px;
   }
 
@@ -84,12 +83,11 @@
   }
 
   .nav-menu button {
-    font-size: 15px;
-    
+    font-size: 13px;
   }
-  .nav-menu button.btn2{
-    background:#ff6600;
-    padding: 5px 12px;
+  .nav-menu button.btn2 {
+    background: #ff6600;
+    padding: 1px 12px;
     border-radius: 30px;
   }
 }
@@ -100,14 +98,3 @@
     height: 28px;
   }
 }
- 
-
-
-
-
-
-
-
-
-
-
