--- a/Frontend/src/pages/ProfileCard/TabComponent/ProjectComponent/DetailsPage/style.scss
+++ b/Frontend/src/pages/ProfileCard/TabComponent/ProjectComponent/DetailsPage/style.scss
@@ -56,6 +56,7 @@
 
   .row-layout {
     flex-direction: row;
+    margin-bottom: 70px;
   }
 
   .column-layout {
@@ -478,16 +479,36 @@
 }
 
 .swiper-pagination.custom-pagination {
-  position: absolute;
-  bottom: 10px;
-  left: 50%;
-  transform: translateX(-50%);
-  z-index: 10;
+  // position: absolute;
+  // bottom: 10px;
+  // left: 50%;
+  // transform: translateX(-50%);
+  // z-index: 10;
+  background-color: #00000080;
+  padding: 3px 10px;
+
+  border-radius: 10px;
+}
+
+.custom-pagination .swiper-pagination-bullet {
+  width: 32px !important;
+  height: 14px !important;
+  background-color: #fff !important;
+  /* border-radius: 50%; */
+  border-radius: 14px !important;
+  opacity: 1 !important;
+}
+
+.custom-pagination .swiper-pagination-bullet-active {
+  width: 42px !important;
+  border-radius: 14px !important;
+  background-color: #ae3c68 !important;
+  transition: all 0.8s ease-in-out !important;
 }
 
 @media (max-width: 1106px) {
   .swiper-nav-buttons {
-    width: 80%; /* Arrows will stay inside swiper */
+    width: 100%; /* Arrows will stay inside swiper */
 
     position: absolute;
   }
@@ -792,6 +813,14 @@
   }
   .mySwiper-thumbs {
     width: 290px;
+  }
+  .custom-pagination .swiper-pagination-bullet {
+    width: 22px !important;
+    height: 10px !important;
+  }
+
+  .custom-pagination .swiper-pagination-bullet-active {
+    width: 22px !important;
   }
 }
 
