--- a/Frontend/src/pages/ProfileCard/TabComponent/ProjectComponent/DetailsPage/style.scss
+++ b/Frontend/src/pages/ProfileCard/TabComponent/ProjectComponent/DetailsPage/style.scss
@@ -502,7 +502,7 @@
 .custom-pagination .swiper-pagination-bullet-active {
   width: 42px !important;
   border-radius: 14px !important;
-  background-color: #ae3c68 !important;
+  background-color: red !important;
   transition: all 0.8s ease-in-out !important;
 }
 
