updating refresh token for autologin

--- a/Frontend/src/components/header/style.scss
+++ b/Frontend/src/components/header/style.scss
@@ -148,7 +148,7 @@
   margin: 0 auto;
   max-width: 650px; /* Increased width from 400px to 500px */
   display: flex;
-  // margin-left: 30px;
+  margin-left: 30px;
   align-items: center;
   cursor: pointer;
 
